samples/_failures_safe/1761391875_d28853_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a197af5a.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_a197af5a.c:158:5: error: expected identifier at end of input
  158 |     for (size_t i = 0; i < tokens->
      |     ^~~
./samples/SAFE/__tmp_a197af5a.c:158:5: error: expected declaration or statement at end of input
